[gd_scene load_steps=7 format=2]

[ext_resource path="res://Room_Handler.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level_Handler.gd" type="Script" id=2]
[ext_resource path="res://EnemySpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://Camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://HealthBar2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://HealthBar3D.gd" type="Script" id=6]

[node name="Level_Handler" type="Spatial"]
script = ExtResource( 2 )

[node name="Camera" parent="." instance=ExtResource( 4 )]
visible = false
current = false

[node name="EnemySpawner" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="Room_Handler" parent="." instance=ExtResource( 1 )]

[node name="HealthBar3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.11545, 0.205739, 2.47357 )
billboard = 1
script = ExtResource( 6 )

[node name="Viewport" type="Viewport" parent="HealthBar3D"]
size = Vector2( 200, 26 )
transparent_bg = true
usage = 0
render_target_v_flip = true

[node name="HealthBar2D" parent="HealthBar3D/Viewport" instance=ExtResource( 5 )]

[node name="Tween" type="Tween" parent="HealthBar3D"]

[connection signal="FadeOutComplete" from="Camera" to="." method="_on_Camera_FadeOutComplete"]
[connection signal="room_clear" from="EnemySpawner" to="." method="_on_EnemySpawner_room_clear"]
[connection signal="set_amount_of_enemies" from="Room_Handler" to="EnemySpawner" method="_set_amount_of_enemies"]
